Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26590

When collecting garbage an object which is deleted but has a signal connected to a local function is not cleaned up

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.8.2
    • Qt Script
    • None
    • d7bba09f263a522d36fd4a704e6667e7a9efd297

    Description

      When collecting garbage an object which is deleted but has a signal connected to a local function is not cleaned up. If the signal is connected to a global function or not connected at all then it is fine.

      Attached is an example that shows this reproducing.

      Attachments

        For Gerrit Dashboard: QTBUG-26590
        # Subject Branch Project Status CR V

        Activity

          People

            kenthans Kent Hansen (Inactive)
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes